# strcrypt

./: README.md  pyproject.toml
strcrypt/: algorithms.py  cli.py  service.py
tests/: test_cli.py  test_decode.py  test_encode.py  test_hash.py
