[tool.poetry]
name = "strcrypt"
version = "0.1.0"
description = ""
authors = ["Dennis Rall <dennis.rall@web.de>"]
readme = "README.md"

[tool.poetry.scripts]
strcrypt = "strcrypt.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
hypothesis = "^6.78.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
